# agent-swarm

./: .env.example  .gitignore  CLAUDE.md  README.md  build-workers.sh  docker-compose.yml  pyproject.toml  requirements-orchestrator.txt  requirements.txt  start-orchestrator.sh  start-redis.sh  start.sh
agents/: README.md  backend-engineer.yaml  data-engineer.yaml  design-reviewer.yaml  devops-engineer.yaml  example.yaml  frontend-engineer.yaml  fullstack-engineer.yaml  mobile-engineer.yaml  mock-a2a-worker.py  qa-engineer.yaml  security-engineer.yaml  tech-writer.yaml
config/: default.yaml.example
dashboard/: app.js  index.html  style.css
design/: 01-architecture.html  02-multi-tenant.html
docker/: Dockerfile.orchestrator  Dockerfile.worker  entrypoint.sh
docs/: 04-agent-intelligence-analysis.html  DEPLOYMENT.md  E2E-WALKTHROUGH.md  USAGE.md  architecture-audit.html  eino-integration-notes.md  eval-report-2026-06-16.html  index.html  onboarding.md  test-report-v0.2.html  verification-report.html
eino-orchestrator/: eino-orchestrator.go  go.mod  go.sum
research/: 01-a2a-protocol.html  02-framework-comparison.html  03-docker-sandbox-architecture.html  04-external-agent-integration.html
src/: config.py  main.py
tests/: test_a2a.py  test_a2a_adapter.py  test_a2a_poll.py  test_a2a_streaming.py  test_adapters.py  test_agent_loop.py  test_api.py  test_cancel_event.py  test_cancel_propagation.py  test_cancellation.py  test_config.py  test_config_validation.py  test_container_pool.py  test_dead_letter.py  test_direct_chat.py  test_dispatcher.py  test_gateway.py  (+31 more)
(+61 files in other folders)
